# cli

./: .gitignore  LICENSE  README.md  au  aureli  equora  install.sh  pyproject.toml  uninstall.sh
aureli/: cli.py  config.py
aureli/core/: node.py  parser.py
aureli/plugins/: manager.py
aureli/runtime/: aureli.py  ipc.py
aureli/utils/: config.py  system.py
equora/: __main__.py
